research/observability/rancher-logging/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-ingress-only-grafana-and-logging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cattle-monitoring-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cattle-logging-system
      ports:
        - protocol: TCP
          port: 3100
